# blitstr

./: .gitignore  CREDITS.md  Cargo.toml  LICENSE  README.md
codegen/: config.json  config_editor.rb  go.mod  main.go
codegen/font/: charmap.go  sprite.go  types.go
codegen/img/: emoji_13_0_aliases.txt  gen_latin_alias.rb
codegen/lib/: blitpattern.go  blockindex.go  charmap.go  charspec.go  config.go  fontspec.go  glyphset.go  matrix.go  murmur3.go  rustyblits.go  sprite.go  templates.go  types.go  ublock.go
codegen/src_data/: chicago_legal.txt  gen_latin_alias.rb  geneva_legal.txt  hanzi_core2020_g_index.txt  icon_index.json  latin_aliases.txt  latin_index.json  noto_sans_sc_legal.txt  twemoji_legal.txt
doc/: API.md
src/: blit.rs  cliprect.rs  cursor.rs  demo.rs  fonts.rs  framebuffer.rs  glyphstyle.rs  lib.rs  m3hash.rs  main.rs  pt.rs  state.rs  views.rs
src/api/: mod.rs  v1.rs
src/fonts/: bold.rs  emoji.rs  hanzi.rs  regular.rs  small.rs
wasm_demo/: Cargo.toml  Makefile  demo.wasm  index.html  main.js  wasm.js  webserver.rb
wasm_demo/.cargo/: config.toml
wasm_demo/src/: lib.rs  no_std_bindings.rs
