[package]
name = "blitstr"
version = "0.5.0"
authors = ["samblenny"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
log = "0.4"

[dependencies.rkyv]
version = "0.4.1"
default-features = false
features = ["const_generics"]

[lib]
doctest = false

[features]
# romfont = []
default = []
